[package]
name = "quantus-cli"
version = "1.0.0"
edition = "2021"
authors = ["Quantus Network"]
license = "Apache-2.0"
description = "Command line interface and library for interacting with the Quantus Network"
homepage = "https://quantus.com"
repository = "https://github.com/Quantus-Network/quantus-cli"
keywords = ["blockchain", "cli", "crypto", "quantum", "quantus-network"]
categories = ["api-bindings", "command-line-utilities", "cryptography"]
readme = "README.md"

[lib]
name = "quantus_cli"
path = "src/lib.rs"

[[bin]]
name = "quantus"
path = "src/main.rs"

[dependencies]
# CLI and async runtime (aligned with chain workspace)
clap = { version = "4.5.13", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.9"

# Error handling
thiserror = "1.0.64"

# Terminal UI
colored = "3.0"
indicatif = "0.17"

# Additional utilities
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4.3", default-features = false }
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "6.0"
rpassword = "7.0.0"

# Quantum-Safe Encryption
argon2 = "0.5"                                         # Password-based key derivation (quantum-safe)
rand = { version = "0.8.5", default-features = false }
aes-gcm = "0.10"                                       # AES-256-GCM (quantum-safe with 256-bit keys)

# Quantus crypto dependencies (aligned with chain)
qp-rusty-crystals-dilithium = { version = "2.1.0" }
qp-rusty-crystals-hdwallet = { version = "1.3.0" }
# Use chain primitive for dilithium so sp-core/sp-runtime match the node (path when chain repo is sibling)
qp-dilithium-crypto = { path = "../chain/primitives/dilithium-crypto", features = ["serde"] }
qp-poseidon = { git = "https://github.com/Quantus-Network/qp-poseidon", branch = "chore/substrate_stable2512_2" }
qp-poseidon-core = { git = "https://github.com/Quantus-Network/qp-poseidon", branch = "chore/substrate_stable2512_2", package = "qp-poseidon-core" }

# HTTP client for Subsquid queries
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"], default-features = false }
blake3 = "1.8"

# Blockchain deps: align with chain workspace; use chain primitives for qp-dilithium-crypto so sp-* versions match
bytes = { version = "1.4.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"] }
sp-core = { version = "39.0.0" }
sp-runtime = { version = "45.0.0" }
frame-support = { version = "45.1.0" }
jsonrpsee = { version = "0.24.3", features = ["client"] }

# Subxt: latest 0.44.x (bug fixes; compatible with sp-core 39 / scale-codec 3.6)
subxt = "0.44"
subxt-metadata = "0.44"

# ZK proof generation (aligned with chain)
anyhow = "1.0"
qp-wormhole-circuit = { version = "1.0.7", default-features = false, features = ["std"] }
qp-wormhole-prover = { version = "1.0.7", default-features = false, features = ["std"] }
qp-wormhole-verifier = { version = "1.0.7", default-features = false, features = ["std"] }
qp-wormhole-aggregator = { version = "1.0.7", default-features = false, features = ["rayon", "std"] }
qp-wormhole-inputs = { version = "1.0.7", default-features = false, features = ["std"] }
qp-zk-circuits-common = { version = "1.0.7", default-features = false, features = ["std"] }
qp-plonky2 = { version = "1.1.3", default-features = false, features = ["rand", "std"] }

[dev-dependencies]
tempfile = "3.8.1"
serial_test = "3.1"
