[package]
authors = ["Quantus Network"]
categories = ["api-bindings", "command-line-utilities", "cryptography"]
description = "Command line interface and library for interacting with the Quantus Network"
edition = "2021"
homepage = "https://quantus.com"
keywords = ["blockchain", "cli", "crypto", "quantum", "quantus-network"]
license = "Apache-2.0"
name = "quantus-cli"
readme = "README.md"
repository = "https://github.com/Quantus-Network/quantus-cli"
version = "1.3.4"

[lib]
name = "quantus_cli"
path = "src/lib.rs"

[[bin]]
name = "quantus"
path = "src/main.rs"

[dependencies]
# CLI and async runtime
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.46", features = ["full"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Error handling
thiserror = "2.0"

# Terminal UI
colored = "3.0"
indicatif = "0.17"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
hex = "0.4"
rpassword = "7.4"
sha2 = "0.10"

# Quantum-Safe Encryption
aes-gcm = "0.10" # AES-256-GCM (quantum-safe with 256-bit keys)
argon2 = "0.5"   # Password-based key derivation (quantum-safe)
rand = "0.9"

# Quantus crypto dependencies (aligned with chain)
qp-dilithium-crypto = { version = "0.3.1", features = ["serde"] }
qp-poseidon = { version = "1.4.0" }
qp-rusty-crystals-dilithium = { version = "2.4.0" }
qp-rusty-crystals-hdwallet = { version = "2.3.1" }

# HTTP client for Subsquid queries
blake3 = "1.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Force patched version of bytes (RUSTSEC-2026-0007)
bytes = "1.11.1"

# Force patched version of quinn-proto (RUSTSEC-2026-0037)
quinn-proto = "0.11.14"

# Force patched version of rustls-webpki (RUSTSEC-2026-0098, RUSTSEC-2026-0099, RUSTSEC-2026-0104)
rustls-webpki = "0.103.13"

# Blockchain deps: align with chain workspace; use chain primitives for qp-dilithium-crypto so sp-* versions match
codec = { package = "parity-scale-codec", version = "3.7", features = ["derive"] }
jsonrpsee = { version = "0.24", features = ["client"] }
sp-core = { version = "39.0.0" }
sp-runtime = { version = "45.0.0" }

# Subxt: latest 0.44.x (bug fixes; compatible with sp-core 39 / scale-codec 3.6)
subxt = "0.44"
subxt-metadata = "0.44"

# ZK proof generation (aligned with chain)
anyhow = "1.0"

qp-plonky2 = { version = "1.4.1", default-features = false, features = ["rand", "std"] }
qp-wormhole-aggregator = { version = "2.0.1", default-features = false, features = ["rayon", "std"] }
qp-wormhole-circuit = { version = "2.0.1", default-features = false, features = ["std"] }
qp-wormhole-circuit-builder = { version = "2.0.1" }
qp-wormhole-inputs = { version = "2.0.1", default-features = false, features = ["std"] }
qp-wormhole-prover = { version = "2.0.1", default-features = false, features = ["std"] }
qp-wormhole-verifier = { version = "2.0.1", default-features = false, features = ["std"] }
qp-zk-circuits-common = { version = "2.0.1", default-features = false, features = ["std"] }


[build-dependencies]
hex = "0.4"
qp-poseidon-core = "1.4.0"
qp-wormhole-circuit-builder = { version = "2.0.1" }

[dev-dependencies]
qp-poseidon-core = "1.4.0"
serial_test = "3.1"
tempfile = "3.8.1"

# Optimize build scripts and their dependencies in dev mode.
# This is critical for circuit generation which is CPU-intensive.
# Without this, circuit generation takes ~10 minutes instead of ~30 seconds.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
